# context-db-mcp

./: .gitignore  BUGFIXES.md  CLAUDE_CODE_SETUP.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  USAGE_GUIDE.md  env.example  pyproject.toml  test_mcp_connection.py
src/context_db_mcp/: __init__.py  config.py  server.py  vector_store.py
src/context_db_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  test_server.py
